test-cases/negative/test_039_invalid_operator_sequence.lay
# negative test: invalid operator sequence
# expected: error should be thrown

the variable x of type Number is 5 plus plus 3


